--- a/tinyMediaManager/locale/messages_cs.properties
+++ b/tinyMediaManager/locale/messages_cs.properties
@@ -237,7 +237,7 @@ Settings.cleanupoptions=Možnosti vyčištění
 Settings.renamer.removenfo=odstraň všechny NFO
 Settings.example=Příklad
 
-Settings.movie.renamer.info=Dostupný vzor\:\n$T \= Title\n$O \= OriginalTitle\n$1 \= first letter of the title\n$E \= Sort title\n$2 \= first letter of sort title\n$Y \= Year\n$M \= Movie set title\n$I \= IMDB number\n$R \= Video resolution\n$A \= audio code + channels\n$V \= video code + format
+Settings.movie.renamer.info=Možné vzory\:\n$T \= Název\n$O \= Původní názef\n$1 \= první písmeno názvu\n$E \= Název pro třídění\n$2 \= První písmeno názvu pro třídění\n$Y \= Rok\n$M \= Název sbírky (pro třídění)\n$N \= Název sbírky\n$I \= IMDB number\n$R \= Rozlišení videa\n$A \= audio codec + kanály\n$V \= video codec + formát
 Settings.movie.renamer.example=Vyber vzor pro přejmenování složek a souboru.\nJestliže jsou pole prázdná, přejmenová bude přeskočeno\!
 Settings.movie.renamer.nomovie=pro příklad je potřeba alespoň jeden film
 Settings.movie.renamer.spacesubstitution=Naraď mezery podtržítky
@@ -264,7 +264,7 @@ tvshow.change=Změň seriál
 tvshow.bulkedit=Editace základních údajů
 tvshow.bulkedit.desc=Změň žánry, štítky vybraných seriálů a/nebo příznak shlédnutí, sezónu vybraných epizod
 tvshow.scrapeepisodeseasondata=Stáhni data pro sezónu & epizodu
-tvshow.update=Obnov seriál
+tvshow.update=Obnov vybrané seriály
 tvshow.rewritenfo=Přepiš NFO pro vybrané seriály
 tvshow.rename=Přejmenuj/smaž označené seriály/epizody
 
@@ -414,3 +414,6 @@ message.movie.searcherror=Hledání filmu selhalo
 message.erroropenfile=Nemohu otevřít soubor
 message.erroropenfolder=Nemohu otevřít složku
 message.erroropenurl=Nemohu otevřít URL{} {}
+
+tree.collapseall=Sbalit všechny uzly
+tree.expandall=Rozbalit všechny uzly
