--- a/tinyMediaManager/locale/messages_fr.properties
+++ b/tinyMediaManager/locale/messages_fr.properties
@@ -237,7 +237,7 @@ Settings.renamer.file=Nom du fichier
 # Settings.renamer.removenfo=remove all other NFOs
 # Settings.example=Example
 
-# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movie set title\r\n$I \= IMDB number\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
+# Settings.movie.renamer.info=Available pattern\:\r\n$T \= Title\r\n$O \= OriginalTitle\r\n$1 \= first letter of the title\r\n$E \= Sort title\r\n$2 \= first letter of sort title\r\n$Y \= Year\r\n$M \= Movieset title (sort title)\r\n$N \= Movieset title\r\n$I \= IMDB number\r\n$R \= Video resolution\r\n$A \= audio code + channels\r\n$V \= video code + format
 # Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped\!
 # Settings.movie.renamer.nomovie=at least one movie is needed for the example
 # Settings.movie.renamer.spacesubstitution=Replace spaces with underscores
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=à faire
 # tv show settings
 # Settings.tvshowdatasource=TV show datasources
 # Settings.tvshowdatasource.folderchooser=add TV show datasource
-# Settings.tvshowdatasource.remove.info="If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+# Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
 
 # tv shows
 # tvshow.scrape.newitems=Scrape new items
@@ -264,7 +264,7 @@ Settings.tvshow.renamer.example=à faire
 # tvshow.bulkedit=Bulk editing
 # tvshow.bulkedit.desc=Change genres, tags of selected TV shows and/or watched flag, season of selected TV episodes
 # tvshow.scrapeepisodeseasondata=Scrape season & episode data
-# tvshow.update=Update TV show
+# tvshow.update=Update selected TV show(s)
 # tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 # tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
 
@@ -414,3 +414,6 @@ message.database.loadmovies=Impossible de charger un film de la base de données
 message.erroropenfile=impossible d'ouvrir le fichier {} {}
 message.erroropenfolder=Impossible d'ouvrir le répertoire {} {}
 message.erroropenurl=Impossible d'ouvrir l'URL {} {}
+
+# tree.collapseall=Collapse all nodes
+# tree.expandall=Expand all nodes
