--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -237,7 +237,7 @@ Settings.cleanupoptions=Opschoon opties
 Settings.renamer.removenfo=wis alle andere NFO's
 Settings.example=Voorbeeld
 
-Settings.movie.renamer.info=Beschikbare patronen\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Film set title\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
+Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
 Settings.movie.renamer.spacesubstitution=Vervang spaties door underscore
@@ -264,7 +264,7 @@ tvshow.change=Wissel TV serie
 tvshow.bulkedit=Bulk bewerken
 tvshow.bulkedit.desc=Verander genres, tags en/of gezien flag, seizoen van geselecteerde TV series
 tvshow.scrapeepisodeseasondata=Scrape seizoen & aflevering data
-tvshow.update=Update TV serie
+tvshow.update=Update geselecteerde TV serie(s)
 tvshow.rewritenfo=Herschrijf NFO voor geselecteerde TV serie(s)
 tvshow.rename=Geselecteerde TV serie(s)/aflevering(en) hernoemen/opschonen
 
@@ -414,3 +414,6 @@ message.movie.searcherror=Zoek film mislukt{} {}
 message.erroropenfile=Kan file niet openen{} {}
 message.erroropenfolder=Kan map niet openen{} {}
 message.erroropenurl=Kan URL niet openen {} {}
+
+tree.collapseall=Alles samenvouwen
+tree.expandall=Alles uitvouwen
