--- a/tinyMediaManager/locale/messages_pt.properties
+++ b/tinyMediaManager/locale/messages_pt.properties
@@ -237,7 +237,7 @@ Settings.cleanupoptions=Opções de limpeza
 Settings.renamer.removenfo=remover todos NFOs
 Settings.example=Exemplo
 
-Settings.movie.renamer.info=Padrão disponível\:\n$T \= Título\n$O \= Título Original\n$1 \= primeira letra do título\n$E \= Título de Lista\n$2 \= primeira letra do título de lista\n$Y \= Ano\n$M \= Título da coleção\n$I \= número IMDB\n$R \= Resolução\n$A \= codec audio + canais\n$V \= codec video + formato
+Settings.movie.renamer.info=Padrão disponível\:\n$T \= Título\n$O \= Título Original\n$1 \= primeira letra do título\n$E \= Título de Lista\n$2 \= primeira letra do título de lista\n$Y \= Ano\n$M \= Título da coleção (de Lista)\n$N \= Título da coleção\n$I \= número IMDB\n$R \= Resolução\n$A \= codec audio + canais\n$V \= codec video + formato
 Settings.movie.renamer.example=Escolha um arquivo e padrão p/ renomear\nSe o campo estiver em branco, não serão renomeados
 Settings.movie.renamer.nomovie=pelo menos um filme é necessário como exemplo
 Settings.movie.renamer.spacesubstitution=Substitua espaços por sublinha
@@ -248,7 +248,7 @@ Settings.tvshow.renamer.example=A Fazer
 # tv show settings
 Settings.tvshowdatasource=Fonte de programa de Tv
 Settings.tvshowdatasource.folderchooser=Adicionar fonte de programa de Tv
-# Settings.tvshowdatasource.remove.info="If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
+# Settings.tvshowdatasource.remove.info=If you remove %s from your datasources, all TV shows and episodes inside this path will be removed from the database. Continue?
 
 # tv shows
 tvshow.scrape.newitems=Buscar novos itens
@@ -264,7 +264,7 @@ tvshow.change=Alterar programa de TV
 tvshow.bulkedit=Edição em lote
 tvshow.bulkedit.desc=Alterar gênero, etiquetas dos programas selecionados e/ou flag assistido e temporada dos episódios.
 tvshow.scrapeepisodeseasondata=Buscar temporada e episódio
-tvshow.update=Atualizar Programa de TV
+# tvshow.update=Update selected TV show(s)
 tvshow.rewritenfo=Reescrever NFO p/ Programa(s) de Tv selecionado(s)
 tvshow.rename=Renomear/limpar programa(s) de TV selecionado(s)
 
@@ -414,3 +414,6 @@ message.movie.searcherror=Pesquisar filme falhou{}{}
 message.erroropenfile=Impossível abrir arquivo{}{}
 message.erroropenfolder=Impossível abrir diretório{}{}
 message.erroropenurl=Impossível abrir URL{}{}
+
+# tree.collapseall=Collapse all nodes
+# tree.expandall=Expand all nodes
