--- a/tinyMediaManager/locale/messages_sk.properties
+++ b/tinyMediaManager/locale/messages_sk.properties
@@ -237,7 +237,7 @@ Settings.cleanupoptions=Nastavenia čistenia
 Settings.renamer.removenfo=Odstrániť všetky ostatné NFO
 Settings.example=Príklad
 
-Settings.movie.renamer.info=Dostupné vzorce↩⏎\n$T \= Názov↩⏎\n$O \= Pôvodný názov↩⏎\n$1 \= Prvé písmeno názvu↩⏎\n$E \= Názov pre usporiadanie↩⏎\n$2 \= Prvé písmeno názvu pre usporiadanie↩⏎\n$Y \= Rok↩⏎\n$M \= Názov kolekcie filmov↩⏎\n$I \= IMDB číslo↩⏎\n$A \= audio kódovanie + kanály↩⏎\n$V \= video kódovanie + formát
+Settings.movie.renamer.info=Dostupné vzorce↩⏎\n$T \= Názov↩⏎\n$O \= Pôvodný názov↩⏎\n$1 \= Prvé písmeno názvu↩⏎\n$E \= Názov pre usporiadanie↩⏎\n$2 \= Prvé písmeno názvu pre usporiadanie↩⏎\n$Y \= Rok↩⏎\n$M \= Názov kolekcie filmov (názov pre usporiadanie)↩⏎\n$N \= Názov kolekcie filmov↩⏎\n$I \= IMDB číslo↩⏎\n$R \= Rozlíčenie videa↩⏎\n$A \= audio kódovanie + kanály↩⏎\n$V \= video kódovanie + formát
 Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.⏎\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
 Settings.movie.renamer.spacesubstitution=Nahradenie medzier podtržníkom
@@ -264,7 +264,7 @@ tvshow.change=Zmeniť seriál
 tvshow.bulkedit=Hromadná úprava
 tvshow.bulkedit.desc=Zmeň žánre, značky označených seriálov a/alebo označenie 'Videné', sezónu označených epizód
 tvshow.scrapeepisodeseasondata=Stiahni informácie o sezóne a epizóde
-tvshow.update=Aktualizovať seriál
+tvshow.update=Aktualizovať označené seriály
 tvshow.rewritenfo=Prepísať NFO označených seriálov
 tvshow.rename=Premenovať/vyčistiť označené seriály/epizódy
 
@@ -414,3 +414,6 @@ message.movie.searcherror=Vyhľadanie filmu zlyhalo{} {}
 message.erroropenfile=Súbor sa nedá otvoriť{} {}
 message.erroropenfolder=Priečinok sa nedá otvoriť{} {}
 message.erroropenurl=URL sa nedá otvoriť{} {}
+
+tree.collapseall=Zbaliť všetky uzly
+tree.expandall=Robaliť všetky uzly
