add some localized genre variants make them translatable

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -417,3 +417,52 @@ message.erroropenurl=Could not open URL{} {}
 
 tree.collapseall=Collapse all nodes
 tree.expandall=Expand all nodes
+
+########################
+# All our genres
+# these keys are not used (just here for translation)
+# if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
+# (since we might need to parse all languages, not just ours)
+Genres.ACTION = Action
+Genres.ADVENTURE = Adventure
+Genres.ANIMATION = Animation
+Genres.ANIMAL = Animal
+Genres.BIOGRAPHY = Biography
+Genres.COMEDY = Comedy
+Genres.CRIME = Crime
+Genres.DISASTER = Disaster
+Genres.DOCUMENTARY = Documentary
+Genres.DRAMA = Drama
+Genres.EASTERN = Eastern
+Genres.EROTIC = Erotic
+Genres.FAMILY = Family
+Genres.FAN_FILM = Fan Film
+Genres.FANTASY = Fantasy
+Genres.FILM_NOIR = Film Noir
+Genres.FOREIGN = Foreign
+Genres.GAME_SHOW = Game Show
+Genres.HISTORY = History
+Genres.HOLIDAY = Holiday
+Genres.HORROR = Horror
+Genres.INDIE = Indie
+Genres.MUSIC = Music
+Genres.MUSICAL = Musical
+Genres.MYSTERY = Mystery
+Genres.NEO_NOIR = Neo Noir
+Genres.NEWS = News
+Genres.REALITY_TV = Reality TV
+Genres.ROAD_MOVIE = Road Movie
+Genres.ROMANCE = Romance
+Genres.SCIENCE_FICTION = Science Fiction
+Genres.SERIES = Series
+Genres.SHORT = Short
+Genres.SILENT_MOVIE = Silent Movie
+Genres.SPORT = Sport
+Genres.SPORTING_EVENT = Sports Event
+Genres.SPORTS_FILM = Sports Film
+Genres.SUSPENSE = Suspense
+Genres.TALK_SHOW = Talk Show
+Genres.TV_MOVIE = TV Movie
+Genres.THRILLER = Thriller
+Genres.WAR = War
+Genres.WESTERN = Western
