--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -51,6 +51,7 @@ status.queuesize=Queue:
 onlyoneoperation=Only one operation at one time is allowed
 update.datasource=Update data sources
 update.datasource.unavailable=Datasource {} not available - skipping 
+update.datasource.movieinroot=Found file '{}' in datasource root - this is NOT supported (move to separate folder to get this imported!) 
 export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
