--- a/tinyMediaManager/locale/messages_cs.properties
+++ b/tinyMediaManager/locale/messages_cs.properties
@@ -51,6 +51,7 @@ status.queuesize=Fronta
 onlyoneoperation=V jednom okamžiku je dovolena pouze jedna operace.
 update.datasource=Obnov zdroj dat
 update.datasource.unavailable=Zdroj dat {} není k dispozici - přeskakuji
+update.datasource.movieinroot=Nalezen soubor '{}' ve zdroji dat root - toto není podporováno (přesuňte to odděleného adresáře, aby byl naimportován\!)
 export.detail=Šablona obsahuje podrobnou stránku
 export.setdestination=Nastav místo pro export
 export.selectdirectory=vyber adresář pro export
@@ -170,7 +171,7 @@ Feedback.send.ok=Zpětná vazba odeslána
 
 # settings menu (linebreaks with html)
 Settings.movies=Filmy
-Settings.scraper=<html><center>Filmy-<br>Stahovačr</center></html>
+Settings.scraper=<html><center>Filmy-<br>Stahovač</center></html>
 Settings.images=<html><center>Filmy -<br>Obrázky</center></html>
 Settings.tvshow=Seriály
 Settings.tvshowscraper=<html><center>Seriály-<br>Stahovač</center></html>
@@ -240,7 +241,7 @@ Settings.example=Příklad
 Settings.movie.renamer.info=Možné vzory\:\n$T \= Název\n$O \= Původní názef\n$1 \= první písmeno názvu\n$E \= Název pro třídění\n$2 \= První písmeno názvu pro třídění\n$Y \= Rok\n$M \= Název sbírky (pro třídění)\n$N \= Název sbírky\n$I \= IMDB number\n$R \= Rozlišení videa\n$A \= audio codec + kanály\n$V \= video codec + formát
 Settings.movie.renamer.example=Vyber vzor pro přejmenování složek a souboru.\nJestliže jsou pole prázdná, přejmenová bude přeskočeno\!
 Settings.movie.renamer.nomovie=pro příklad je potřeba alespoň jeden film
-Settings.movie.renamer.spacesubstitution=Naraď mezery podtržítky
+Settings.movie.renamer.spacesubstitution=Nahraď mezery
 
 Settings.tvshow.renamer.info=Zbývá dodělat
 Settings.tvshow.renamer.example=Zbývá dodělat
@@ -296,7 +297,7 @@ metatag.genre=Žánry
 metatag.guests=Hosté
 metatag.images=Obrázky
 metatag.imdb=IMDB Id
-metatag.internal=vnitřní
+metatag.internal=interní
 metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
@@ -417,3 +418,52 @@ message.erroropenurl=Nemohu otevřít URL{} {}
 
 tree.collapseall=Sbalit všechny uzly
 tree.expandall=Rozbalit všechny uzly
+
+########################
+# All our genres
+# these keys are not used (just here for translation)
+# if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
+# (since we might need to parse all languages, not just ours)
+Genres.ACTION = Akční
+Genres.ADVENTURE = Dobrodružný
+Genres.ANIMATION = Animovaný
+Genres.ANIMAL = O zvířatech
+Genres.BIOGRAPHY = Životopisný
+Genres.COMEDY = Komedie
+Genres.CRIME = Kriminální
+Genres.DISASTER = Katastrofický
+Genres.DOCUMENTARY = Dokumentární
+Genres.DRAMA = Drama
+Genres.EASTERN = Východní
+Genres.EROTIC = Erotický
+Genres.FAMILY = Rodinný
+Genres.FAN_FILM = Fanouškovský
+Genres.FANTASY = Fantazy
+Genres.FILM_NOIR = Film Noir
+Genres.FOREIGN = Zahraniční
+Genres.GAME_SHOW = Herní Show
+Genres.HISTORY = Historický
+Genres.HOLIDAY = Prázdninový
+Genres.HORROR = Horror
+Genres.INDIE = Nezávislý
+Genres.MUSIC = hudební
+Genres.MUSICAL = Muzikál
+Genres.MYSTERY = Mysteriózní
+Genres.NEO_NOIR = Neo Noir
+Genres.NEWS = Zprávodajský
+Genres.REALITY_TV = Reality TV
+Genres.ROAD_MOVIE = Road Movie
+Genres.ROMANCE = Romantický
+Genres.SCIENCE_FICTION = Sci-fi
+Genres.SERIES = Serie
+Genres.SHORT = Krátký film
+Genres.SILENT_MOVIE = Němý film
+Genres.SPORT = Sportovní
+Genres.SPORTING_EVENT = Sportovní událost
+Genres.SPORTS_FILM = Spor
+Genres.SUSPENSE = Suspense
+Genres.TALK_SHOW = Talk Show
+Genres.TV_MOVIE = Televizní film
+Genres.THRILLER = Thriller
+Genres.WAR = Válečný
+Genres.WESTERN = Western
