--- a/tinyMediaManager/locale/messages_de.properties
+++ b/tinyMediaManager/locale/messages_de.properties
@@ -51,6 +51,7 @@ status.queuesize=Warteschlange\:
 onlyoneoperation=Nur eine Funktion zur gleichen Zeit darf ausgeführt werden
 update.datasource=Filmverzeichnis neu einlesen
 update.datasource.unavailable=Datenordner {} nicht verfügbar - überspringe
+update.datasource.movieinroot=Datei '{}' im Hauptverzeichnis gefunden. Das wird NICHT unterstützt (bitte Film ein ein eigenes Verzeichnis verschieben, um ihn zu importieren\!)
 export.detail=Vorlage beinhaltet Film Detailseiten
 export.setdestination=Verzeichnis auswählen
 export.selectdirectory=Wähle Verzeichnis für den Export
@@ -218,7 +219,7 @@ Settings.default.autoscrape=Automatisch Bilder herunterladen (ohne manueller Aus
 
 # movie settings
 Settings.movie.datasource=Film Verzeichnis
-Settings.movie.datasource.remove.info=Wenn Du den Pfad %s entfernst, werden auch alle Filme mit dem Pfad aus der DB entfernt. Weitermachen?
+Settings.movie.datasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle Filme in diesem Pfad aus der Datenbank entfernt. Weitermachen?
 
 Settings.datasource.folderchooser=Film Verzeichnis hinzufügen
 Settings.datasource.remove=Film Verzeichnis entfernen
@@ -237,10 +238,10 @@ Settings.cleanupoptions=Cleanup Optionen
 Settings.renamer.removenfo=alle anderen NFOs entfernen
 Settings.example=Beispiel
 
-Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel\n$I \= IMDB Nummer\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
+Settings.movie.renamer.info=Verfügbare Werte\n$T \= Titel\n$O \= Original Titel\n$1 \= Erster Buchstabe des Titels\n$E \= Titel sortiert\n$2 \= Erster Buchstabe des sortierten Titels\n$Y \= Jahr\n$M \= Filmset Titel (sortiert)\n$N \= Filmset Titel\n$I \= IMDB Nummer\n$R \= Video Auflösung\n$A \= Audio Codec + Kanäle\n$V \= Video Codec + Format
 Settings.movie.renamer.example=Wähle die Namensvorlage für Dateien und Ordner.\nWenn leer, wird das Umbenennen übersprungen.
 Settings.movie.renamer.nomovie=brauche wenigstens einen (gescrapten) Film für die Vorschau
-Settings.movie.renamer.spacesubstitution=Leerzeichen mit _ ersetzen
+Settings.movie.renamer.spacesubstitution=Leerzeichen ersetzen durch
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
@@ -248,7 +249,7 @@ Settings.tvshow.renamer.example=ToDo
 # tv show settings
 Settings.tvshowdatasource=TV Show Ordner
 Settings.tvshowdatasource.folderchooser=neuen TV Show Ordner hinzufügen
-Settings.tvshowdatasource.remove.info=Wenn %s entfernt wird, werden auch alle TV Shows und Episoden aus der DB entfernt. Weitermachen?
+Settings.tvshowdatasource.remove.info=Wenn du %s von den Datenordnern entfernst, werden alle TV Shows und Episoden in diesem Pfad aus der Datenbank entfernt. Weitermachen?
 
 # tv shows
 tvshow.scrape.newitems=Neu gefundene Dateien scrapen
@@ -264,9 +265,9 @@ tvshow.change=Wechsle TV Show
 tvshow.bulkedit=Mehrfach bearbeiten
 tvshow.bulkedit.desc=Genres, Tags, Saison und 'Gesehen' Markierung von ausgewählten TV Shows ändern
 tvshow.scrapeepisodeseasondata=Saison & Episoden Metadaten scrapen
-tvshow.update=TV Show updaten
+tvshow.update=ausgewählte TV Show(s) updaten
 tvshow.rewritenfo=NFO für ausgewählte TV Show(s) neu schreiben
-tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows/Episoden
+tvshow.rename=Umbenennen / Cleanup ausgewählter TV Shows / Episoden
 
 tvshowepisode.scrape=Scrape Episoden Metadaten
 tvshowepisode.clone=Episode kopieren
@@ -414,3 +415,55 @@ message.movie.searcherror=Fehler beim Suchen {} {}
 message.erroropenfile=Konnte Datei {} nicht öffnen {}
 message.erroropenfolder=Konnte Ordner {} nicht öffnen {}
 message.erroropenurl=Konnte URL {} nicht öffnen {}
+
+tree.collapseall=Alle Knoten zusammenklappen
+tree.expandall=Alle Knoten aufklappen
+
+########################
+# All our genres
+# these keys are not used (just here for translation)
+# if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
+# (since we might need to parse all languages, not just ours)
+Genres.ACTION = Action
+Genres.ADVENTURE = Abenteuer
+Genres.ANIMATION = Zeichentrick
+Genres.ANIMAL = Tierfilm
+Genres.BIOGRAPHY = Biographie
+Genres.COMEDY = Komödie
+Genres.CRIME = Krimi
+Genres.DISASTER = Katastrophen
+Genres.DOCUMENTARY = Dokumentation
+Genres.DRAMA = Drama
+Genres.EASTERN = Eastern
+Genres.EROTIC = Erotik
+Genres.FAMILY = Familie
+Genres.FAN_FILM = Fan Film
+Genres.FANTASY = Fantasy
+Genres.FILM_NOIR = Film Noir
+Genres.FOREIGN = Ausländisch
+Genres.GAME_SHOW = Spielshow
+Genres.HISTORY = Geschichte
+Genres.HOLIDAY = Urlaub
+Genres.HORROR = Horror
+Genres.INDIE = Indie
+Genres.MUSIC = Musik
+Genres.MUSICAL = Musikal
+Genres.MYSTERY = Mysterie
+Genres.NEO_NOIR = Neo Noir
+Genres.NEWS = Nachrichten
+Genres.REALITY_TV = Reality-TV
+Genres.ROAD_MOVIE = Roadmovie
+Genres.ROMANCE = Romantik
+Genres.SCIENCE_FICTION = Science Fiction
+Genres.SERIES = Serien
+Genres.SHORT = Kurzfilm
+Genres.SILENT_MOVIE = Stummfilm
+Genres.SPORT = Sport
+Genres.SPORTING_EVENT = Sportereignis
+Genres.SPORTS_FILM = Sportfilm
+Genres.SUSPENSE = Suspense
+Genres.TALK_SHOW = Talkshow
+Genres.TV_MOVIE = Fernsehfilm
+Genres.THRILLER = Thriller
+Genres.WAR = Krieg
+Genres.WESTERN = Western
