--- a/tinyMediaManager/locale/messages_nl.properties
+++ b/tinyMediaManager/locale/messages_nl.properties
@@ -51,6 +51,7 @@ status.queuesize=Wachtlijst\:
 onlyoneoperation=Maar één proces tegelijk toegestaan
 update.datasource=Bronnen bijwerken
 update.datasource.unavailable=Databron {} niet beschikbaar - overslaan
+update.datasource.movieinroot=Bestand '{}' in databron gevonden - dit wordt niet ondersteund (plaats in aparte map om dit te kunnen importeren\!)
 export.detail=Template bevat detail pagina's
 export.setdestination=Stel export doel in
 export.selectdirectory=Selecteer export map
@@ -240,7 +241,7 @@ Settings.example=Voorbeeld
 Settings.movie.renamer.info=Beschikbare methodes\:\n$T \= Titel\n$O \= Originele titel\n$1 \= Eerste letter van titel\n$E \= Sorteer titel\n$2 \= Eerste letter van Sorteer titel\n$Y \= Jaar\n$M \= Filmset titel (sorteer titel)\n$N \= Filmset titel\n$I \= IMDB nummer\n$R \= Video resolutie\n$A \= Audio code + kanalen\n$V \= Video code + formaat
 Settings.movie.renamer.example=Kies een hernoem patroon voor de map en bestand \nHernoemen wordt overgeslagen bij lege velden\!
 Settings.movie.renamer.nomovie=tenmiste één film is nodig voor het voorbeeld
-Settings.movie.renamer.spacesubstitution=Vervang spaties door underscore
+Settings.movie.renamer.spacesubstitution=Vervang spaties door
 
 Settings.tvshow.renamer.info=Te doen
 Settings.tvshow.renamer.example=Te doen
@@ -417,3 +418,52 @@ message.erroropenurl=Kan URL niet openen {} {}
 
 tree.collapseall=Alles samenvouwen
 tree.expandall=Alles uitvouwen
+
+########################
+# All our genres
+# these keys are not used (just here for translation)
+# if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
+# (since we might need to parse all languages, not just ours)
+Genres.ACTION = Actie
+Genres.ADVENTURE = Avontuur
+Genres.ANIMATION = Animatie
+Genres.ANIMAL = Dieren
+Genres.BIOGRAPHY = Biografie
+Genres.COMEDY = Comedie
+Genres.CRIME = Misdaad
+Genres.DISASTER = Rampen
+Genres.DOCUMENTARY = Documentaire
+Genres.DRAMA = Drama
+Genres.EASTERN = Oosters
+Genres.EROTIC = Erotisch
+Genres.FAMILY = Familie
+Genres.FAN_FILM = Fan Film
+Genres.FANTASY = Fantasy
+Genres.FILM_NOIR = Film Noir
+Genres.FOREIGN = Buitenlands
+Genres.GAME_SHOW = Spelshow
+Genres.HISTORY = Historie
+Genres.HOLIDAY = Vakantie
+Genres.HORROR = Horror
+Genres.INDIE = Indie
+Genres.MUSIC = Muziek
+Genres.MUSICAL = Musical
+Genres.MYSTERY = Mysterie
+Genres.NEO_NOIR = Neo Noir
+Genres.NEWS = Nieuws
+Genres.REALITY_TV = Reality TV
+Genres.ROAD_MOVIE = Road Movie
+Genres.ROMANCE = Romantiek
+Genres.SCIENCE_FICTION = Science Fiction
+Genres.SERIES = Series
+Genres.SHORT = Korte Film
+Genres.SILENT_MOVIE = Stomme Film
+Genres.SPORT = Sport
+Genres.SPORTING_EVENT = Sport Evenement
+Genres.SPORTS_FILM = Sport Film
+Genres.SUSPENSE = Spanning
+Genres.TALK_SHOW = Talk Show
+Genres.TV_MOVIE = TV film
+Genres.THRILLER = Thriller
+Genres.WAR = Oorlog
+Genres.WESTERN = Western
