--- a/tinyMediaManager/locale/messages_sk.properties
+++ b/tinyMediaManager/locale/messages_sk.properties
@@ -51,6 +51,7 @@ status.queuesize=Front\:
 onlyoneoperation=V jednom okamihu Je povolená iba jedna operácia
 update.datasource=Aktualizovať zdroje dát
 update.datasource.unavailable=Zdroj dát {} nie je dostupný - preskakujem
+update.datasource.movieinroot=Nájdený súbor '{}' v koreni zdroja dát - Toto nie je podporované (pre importovanie presuňte súbor do samostatnej zložky\!)
 export.detail=Šablóna obsahuje stránky podrobností
 export.setdestination=Nastaviť cieľový priečinok exportu
 export.selectdirectory=Vyberte cieľový priečinok exportu
@@ -229,7 +230,7 @@ Settings.videofiletypes=Video typy súborov
 Settings.extrafiletypes=Titulky a prídavné typy súborov
 Settings.audiofiletypes=Audio typy súborov
 Settings.sorting=Usporiadanie názvov
-Settings.sorting.info=Vyberte prefixy, ktoré budú mať vplyv na poradie v zozname⏎\nPríklad\: The⏎\n'The Bourne Identity' sa zobrazí ako 'Bourne Identity, The'⏎\nPokiaľ chcete zakázať túto funkciu, vymažte zoznam
+Settings.sorting.info=Vyberte prefixy, ktoré budú mať vplyv na poradie v zozname\nPríklad\: The\n'The Bourne Identity' sa zobrazí ako 'Bourne Identity, The'\nPokiaľ chcete zakázať túto funkciu, vymažte zoznam
 Settings.renamer=Premenovanie
 Settings.renamer.folder=Názov priečinku
 Settings.renamer.file=Názov súboru
@@ -237,10 +238,10 @@ Settings.cleanupoptions=Nastavenia čistenia
 Settings.renamer.removenfo=Odstrániť všetky ostatné NFO
 Settings.example=Príklad
 
-Settings.movie.renamer.info=Dostupné vzorce↩⏎\n$T \= Názov↩⏎\n$O \= Pôvodný názov↩⏎\n$1 \= Prvé písmeno názvu↩⏎\n$E \= Názov pre usporiadanie↩⏎\n$2 \= Prvé písmeno názvu pre usporiadanie↩⏎\n$Y \= Rok↩⏎\n$M \= Názov kolekcie filmov (názov pre usporiadanie)↩⏎\n$N \= Názov kolekcie filmov↩⏎\n$I \= IMDB číslo↩⏎\n$R \= Rozlíčenie videa↩⏎\n$A \= audio kódovanie + kanály↩⏎\n$V \= video kódovanie + formát
-Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.⏎\nAk sú polia prázdne, premenovanie bude preskočené\!
+Settings.movie.renamer.info=Dostupné vzorce\n$T \= Názov\n$O \= Pôvodný názov\n$1 \= Prvé písmeno názvu\n$E \= Názov pre usporiadanie\n$2 \= Prvé písmeno názvu pre usporiadanie\n$Y \= Rok\n$M \= Názov kolekcie filmov (názov pre usporiadanie)\n$N \= Názov kolekcie filmov\n$I \= IMDB číslo\n$R \= Rozlíšenie videa\n$A \= audio kódovanie + kanály\n$V \= video kódovanie + formát
+Settings.movie.renamer.example=Vyberte vzor pre premenovanie priečinku a súboru.\nAk sú polia prázdne, premenovanie bude preskočené\!
 Settings.movie.renamer.nomovie=pre príklad Je potrebný aspoň jeden film
-Settings.movie.renamer.spacesubstitution=Nahradenie medzier podtržníkom
+Settings.movie.renamer.spacesubstitution=Miesto medzery použiť
 
 Settings.tvshow.renamer.info=ToDo
 Settings.tvshow.renamer.example=ToDo
@@ -301,7 +302,7 @@ metatag.mediafiletype=Typ
 metatag.minutes=min
 metatag.movie=Film
 metatag.movieset=Kolekcia filmov
-metatag.name=Názov
+metatag.name=Meno
 metatag.nfo=NFO
 metatag.notwatched=Nevidené
 metatag.originaltitle=Pôvodný názov
@@ -368,7 +369,7 @@ moviechooser.search=Vyhľadať film
 tvshowchooser.search=Vyhľadať seriál
 tvshowepisodechooser.search=Vyhľadať epizódu
 
-movieextendedsearch.options=Nastavenia rozšíreného filter a usporiadania
+movieextendedsearch.options=Nastavenia rozšíreného filtra a usporiadania
 movieextendedsearch.filterby=filtrovať podľa
 movieextendedsearch.duplicates=Zobraziť duplikáty
 movieextendedsearch.watched=Označenie 'Videné'
@@ -417,3 +418,52 @@ message.erroropenurl=URL sa nedá otvoriť{} {}
 
 tree.collapseall=Zbaliť všetky uzly
 tree.expandall=Robaliť všetky uzly
+
+########################
+# All our genres
+# these keys are not used (just here for translation)
+# if we got the localized values, add them to the MediaGenres class (with xx- locale prefix)
+# (since we might need to parse all languages, not just ours)
+Genres.ACTION = Akčný
+Genres.ADVENTURE = Dobrodružný
+Genres.ANIMATION = \ Animovaný
+Genres.ANIMAL = O zvieratách
+Genres.BIOGRAPHY = Životopisný
+Genres.COMEDY = Komédia
+Genres.CRIME = Kriminálny
+Genres.DISASTER = Katastrofický
+Genres.DOCUMENTARY = Dokumentárny
+Genres.DRAMA = Dramatický
+Genres.EASTERN = Orientálny
+Genres.EROTIC = Erotický
+Genres.FAMILY = Rodinný
+Genres.FAN_FILM = Fanúšikovský
+Genres.FANTASY = Fantasy
+Genres.FILM_NOIR = Film Noir
+Genres.FOREIGN = Zahraničný
+Genres.GAME_SHOW = Game Show
+Genres.HISTORY = Historický
+Genres.HOLIDAY = Sviatočný
+Genres.HORROR = Horor
+Genres.INDIE = Indie
+Genres.MUSIC = Hudobný
+Genres.MUSICAL = Muzikál
+Genres.MYSTERY = Mysteriózny
+Genres.NEO_NOIR = Neo Noir
+Genres.NEWS = Správy
+Genres.REALITY_TV = Reality show
+Genres.ROAD_MOVIE = Road Movie
+Genres.ROMANCE = Romantický
+Genres.SCIENCE_FICTION = Sci-fi
+Genres.SERIES = Seriál
+Genres.SHORT = Krátky film
+Genres.SILENT_MOVIE = Nemý Film
+Genres.SPORT = Šport
+Genres.SPORTING_EVENT = Športová udalosť
+Genres.SPORTS_FILM = Športový Film
+Genres.SUSPENSE = Suspense
+Genres.TALK_SHOW = Talk Show
+Genres.TV_MOVIE = TV film
+Genres.THRILLER = Thriller
+Genres.WAR = Vojnový
+Genres.WESTERN = Western
