--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -224,6 +224,8 @@ Settings.movie.datasource.remove.info=If you remove %s from your datasources, al
 Settings.datasource.folderchooser=Add datasource
 Settings.datasource.remove=Remove datasource
 
+Settings.multipleMovies=Allow multiple movies per folder
+Settings.multipleMovies.hint=BE AWARE: this option will allow you to import multiple movies per folder.\nEnabling this will cause some side effects: you are no longer be able to\nchoose any specific file naming or use extrafanart/extrathumbs.\nENABLING THIS OPTION IS NOT RECOMMENDED!   
 Settings.nfoFormat=NFO format
 Settings.nofFileNaming=NFO file naming
 Settings.videofiletypes=Video filetypes
