--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -1,4 +1,3 @@
-# Buttons
 Button.ok=Ok
 Button.cancel=Cancel
 Button.add=Add
@@ -51,7 +50,7 @@ status.queuesize=Queue:
 onlyoneoperation=Only one operation at one time is allowed
 update.datasource=Update data sources
 update.datasource.unavailable=Datasource {} not available - skipping 
-update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'MultiMovieDir' feature in movie settings (read carefully!) 
+update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully!) 
 export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
