--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -50,7 +50,8 @@ status.queuesize=Queue:
 onlyoneoperation=Only one operation at one time is allowed
 update.datasource=Update data sources
 update.datasource.unavailable=Datasource {} not available - skipping 
-update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully!) 
+update.datasource.movieinroot=Found file '{}' in a directory containing more than one movie. To get this imported, please activate the 'Allow multiple movies per folder' feature in movie settings (read carefully!)
+update.datasource.episodeinroot=Found file '{}' in the root directory of the data source. To get this imported, move it to its own directory! 
 export.detail=Template contains detail pages
 export.setdestination=Set export destination
 export.selectdirectory=select export directory
@@ -71,6 +72,7 @@ movie.updatemediainfo=Update media information of selected movie(s)
 movie.bulkedit=Bulk editing
 movie.bulkedit.desc=Change genres, tags, movieset and watched flag for all selected movies
 movie.rewritenfo=Rewrite NFO for selected movie(s)
+movie.clearimagecache=Clear image cache for selected movie(s)
 
 movie.export=Export selected movie(s)
 
@@ -238,6 +240,8 @@ Settings.renamer.file=File name
 Settings.cleanupoptions=Cleanup options
 Settings.renamer.removenfo=remove all other NFOs
 Settings.example=Example
+Settings.imagecacheimport=Build image cache on import
+Settings.imagecacheimporthint=Attention: this may take a while. Works only if the image cache is enabled
 
 Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
@@ -269,6 +273,7 @@ tvshow.scrapeepisodeseasondata=Scrape season & episode data
 tvshow.update=Update selected TV show(s) 
 tvshow.rewritenfo=Rewrite NFO for selected TV show(s)
 tvshow.rename=Rename/cleanup selected TV show(s)/episode(s)
+tvshow.clearimagecache=Clear image cache for selected TV show(s)/episode(s)
 
 tvshowepisode.scrape=Scrape episode metadata
 tvshowepisode.clone=Clone episode
