--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -42,6 +42,7 @@ tmm.about=About
 tmm.donate=Donate
 tmm.searchfield=Search...
 tmm.errorlogs=Show error log
+tmm.wakeonlandevice=Wake on LAN device
 
 status.activethreads=active threads
 status.queuesize=Queue:
@@ -177,6 +178,7 @@ Settings.images=<html><center>Movies -<br>Images</center></html>
 Settings.tvshow=Tv Shows
 Settings.tvshowscraper=<html><center>Tv Shows -<br>Scraper</center></html>
 Settings.general=General
+Settings.externaldevices=<html>External<br>devices</html>
 
 # general settings
 Settings.proxy=Proxy Settings
@@ -242,6 +244,8 @@ Settings.renamer.removenfo=remove all other NFOs
 Settings.example=Example
 Settings.imagecacheimport=Build image cache on import
 Settings.imagecacheimporthint=Attention: this may take a while. Works only if the image cache is enabled
+Settings.devicename=Device name
+Settings.macaddress=MAC address
 
 Settings.movie.renamer.info=Available pattern:\r\n$T = Title\r\n$O = OriginalTitle\r\n$1 = first letter of the title\r\n$E = Sort title\r\n$2 = first letter of sort title\r\n$Y = Year\r\n$M = Movieset title (sort title)\r\n$N = Movieset title\r\n$I = IMDB number\r\n$R = Video resolution\r\n$A = audio code + channels\r\n$V = video code + format
 Settings.movie.renamer.example=Choose a folder and file renaming pattern.\nIf fields are empty, the renaming will be skipped!
@@ -421,6 +425,9 @@ message.movie.searcherror=Search movie failed{} {}
 message.erroropenfile=Could not open file{} {}
 message.erroropenfolder=Could not open folder{} {}
 message.erroropenurl=Could not open URL{} {}  
+
+message.missingitems=Please fill out all required fields
+message.invalidmac=Invalid MAC address. It has to be in the following format: AA:BB:CC:DD:EE:FF
 
 tree.collapseall=Collapse all nodes
 tree.expandall=Expand all nodes
