rework on the menu

--- a/tinyMediaManager/src/messages.properties
+++ b/tinyMediaManager/src/messages.properties
@@ -38,7 +38,9 @@ tmm.cleardatabase.info=Database initialized. Please restart tinyMediaManager
 tmm.cleardatabase.error=An error occured on database init. Please delete the file tmm.odb manually
 tmm.gotoinstalldir=Open tMM install directory in a file browser 
 tmm.debug=Debug
+tmm.tools=Tools
 tmm.about=About
+tmm.contact=Contact us
 tmm.donate=Donate
 tmm.searchfield=Search...
 tmm.errorlogs=Show error log
